# django-tagulous2

./: pyproject.toml
.github/workflows/: ci.yml
tagulous/static/tagulous/adaptor/: select2-4.js
