[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./"]

[project]
name = "django-tagulous2"
version = "2024.5.17"
requires-python = ">=3.9"
description = "Fabulous Tagging for Django"
readme  = "README.rst"
authors = [
  { name="Richard Terry", email="code@radiac.net" },
  { name="Versun", email="feed2json@versun.me" },
]
license = {text = "BSD License"}
classifiers =[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    ]
dependencies = [
    "Django>=4.0",
]

[project.urls]
    Documentation = "https://radiac.net/projects/django-tagulous/documentation/"
    Source = "https://github.com/versun/django-tagulous2"
    Tracker = "https://github.com/versun/django-tagulous2/issues"